ドラッグ & ドロップ版の今日のタスク登録機能を追加

--- a/app/views/select/index.html.erb
+++ b/app/views/select/index.html.erb
@@ -8,7 +8,7 @@
       <div class="card-body">
         <ul class="list-group sortable" style="height: 200px">
           <% @tasks.each do |task| %>
-          	<li class="list-group-item"><%= task.content %> </li>
+          	<li class="list-group-item" value="<%= task.id %>"><%= task.content %> </li>
           <% end %>
 
         </ul>
@@ -19,14 +19,22 @@
   <div class="col-sm">
     <div class="card">
       <div class="card-body">
-        <ul class="list-group sortable" style="height: 200px">
+        <ul class="list-group sortable" style="height: 200px" id="selected_ul">
         </ul>
       </div>
     </div>
   </div>
 </div>
 
-<form action="select" method="post">
+<!-- 新登録ボタン -->
+<div class="row mt-3">
+  <div class="col-sm">
+    <a href="javascript:void(0)" onclick="submit_form_select();" class="btn btn-success">送信</a>
+  </div>
+</div>
+
+<form action="select" method="post" id="form_select">
+<!--
 <p><% @tasks.each do |task| %>
 	<%= check_box_tag 'checked[id][]', task.id %>
 	<%= task.content %>
@@ -37,6 +45,7 @@
 <p>
 <input type="submit" value="登録する">
 </p>
+-->
 <input type="hidden" name="authenticity_token" value="r6fFH/olgV75lxN8y1k8OzmcbgIZ6yiJO2Hu/Wq9twKaiQE73m7nilqV6faTlC8KJMIyBN1HCFbKuptY+urnAA==" />
 
 </form>
@@ -48,5 +57,19 @@
       connectWith: ".sortable"
     });
   });
+
+  // 新登録ボタン
+  function submit_form_select() {
+    // 右の移動されたタスク ID を取ってくる
+    $("#selected_ul li").each(function(index) {
+      var task_id = $(this).prop("value");
+
+      // そのタスク ID を無理やりフォームに hidden でぶっ込む
+      $('<input>', { type:'hidden', name: "checked[id][]", value: task_id }).appendTo($("#form_select"));
+    });
+
+    // submit ボタンを押す
+  　$("#form_select").submit();
+  }
 </script>
 <% end %>
