--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,39 @@
   </head>
 
   <body>
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <%= link_to top_path, { class: "navbar-brand" } do %>
+          TOP ページ
+        <% end %>
+
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <%= link_to "今日のタスク", today_path, { class: "nav-link" } %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "タスク一覧", tasks_path, { class: "nav-link" } %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "タスク選択", select_path, { class: "nav-link" } %>
+            </li>
+          </ul>
+        </div>
+
+        <div class="justify-content-end align-items-center">
+          <%= link_to "ログイン", new_user_session_path, { class: "btn btn-sm btn-outline-secondary" } %>
+          <%= link_to "ログアウト", destroy_user_session_path, { class: "btn btn-sm btn-outline-secondary", method: :delete } %>
+        </div>
+      </div>
+    </nav>
+
     <div class="container">
-    <%= link_to "ログイン", new_user_session_path, method: :get %>
-    <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-    <%= yield %>
-           <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-     </div>
-
-
+      <%= yield %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
