--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
             <li class="nav-item">
               <%= link_to "タスク選択", select_path, { class: "nav-link" } %>
             </li>
+            <li class="nav-item">
+              <%= link_to "タスクの登録", tasks_new_path, { class: "nav-link" } %>
+            </li>
           </ul>
         </div>
 
